force-app/main/default/objects/Marketing_goal__c/Marketing_goal__c.object-meta.xml
<CustomObject>
    <label>שיווק ופרסום</label>
    <nameField>
        <displayFormat>MG-{0000}</displayFormat>
        <label>Marketing goals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>שיווק ופרסום</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>