force-app/main/default/objects/Marketing_goal__c/fields/budget__c.field-meta.xml
<CustomField>
    <fullName>budget__c</fullName>
    <label>budget</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>