force-app/main/default/objects/Marketing_goal__c/validationRules/this_year_or_next_year.validationRule-meta.xml
<ValidationRule>
    <fullName>this_year_or_next_year</fullName>
    <active>true</active>
    <errorConditionFormula>Year__c &gt;  YEAR( TODAY() ) +1 || Year__c &lt; YEAR( TODAY() ) -1</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>שנה יכולה להיות נוכחית, קודמת לתיקון נתונים או הבאה לתכנון</errorMessage>
</ValidationRule>