force-app/main/default/objects/Marketing_goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>budget__c</columns>
    <columns>Management_Fee__c</columns>
    <columns>Total__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>